--- a/public/sidebar.html
+++ b/public/sidebar.html
@@ -4,14 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LLM Mentor</title>
-
-  <!-- Correct relative path for the CSS file -->
-  <link rel="stylesheet" href="../src/css/material.indigo-pink.min.css">
 </head>
 <body>
-  <div id="root"></div> <!-- React app will be injected here -->
-
-  <!-- Correct relative path for the bundle.js -->
-  <script src="../dist/bundle.js"></script> <!-- Load the Webpack bundle -->
+  <div id="root"></div>
 </body>
 </html>
